--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,21 @@
 {
+  "name": "hashbangcode/Wevolution",
+  "description": "Wevolution",
+  "license": "MIT",
+  "keywords": ["wevolution"],
+  "authors": [
+    {
+      "name": "Philip Nporton",
+      "email": "philipnorton42@gmail.com"
+    }
+  ],
+  "require": {},
   "require-dev": {
     "phpunit/phpunit": "4.0.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Hashbangcode\\Wevolution\\": "src"
+    }
   }
 }
