--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {},
   "require-dev": {
     "phpunit/phpunit": "4.0.*",
-    "silex/silex": "~1.2"
+    "silex/silex": "~1.2",
+    "twig/twig": "1.24.*"
   },
   "autoload": {
     "psr-4": {
