--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
       "email": "philipnorton42@gmail.com"
     }
   ],
-  "require": {},
-  "require-dev": {
-    "phpunit/phpunit": "4.0.*",
+  "require": {
     "silex/silex": "~1.2",
-    "twig/twig": "1.24.*"
+    "twig/twig": "1.24.*",
+    "consoletvs/charts" : "1.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.0.*"
   },
   "autoload": {
     "psr-4": {
