--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "silex/silex": "~1.2",
+    "slim/slim": "^3.0",
     "twig/twig": "1.24.*",
     "consoletvs/charts" : "1.3"
   },
