--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,6 @@
       "email": "philipnorton42@gmail.com"
     }
   ],
-  "require": {
-    "slim/slim": "^3.0",
-    "twig/twig": "1.24.*",
-    "consoletvs/charts" : "1.3"
-  },
   "require-dev": {
     "phpunit/phpunit": "4.0.*"
   },
@@ -21,5 +16,9 @@
     "psr-4": {
       "Hashbangcode\\Wevolution\\": "src"
     }
+  },
+  "scripts": {
+    "start": "php -S 0.0.0.0:8000 -t demos/public demos/public/index.php",
+    "test": "./vendor/bin/phpunit"
   }
 }
