--- a/demos/composer.json
+++ b/demos/composer.json
@@ -2,20 +2,15 @@
     "require": {
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "slim/twig-view" : "^2",
+        "monolog/monolog": "^1.17",
+        "consoletvs/charts" : "1.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
 	"scripts": {
-        "start": "php -S 0.0.0.0:8080 -t public public/index.php",
+        "start": "php -S 0.0.0.0:8000 -t public public/index.php",
         "test": "phpunit"
 	}
-
 }
