--- a/demos/composer.json
+++ b/demos/composer.json
@@ -9,6 +9,11 @@
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
 	"scripts": {
         "start": "php -S 0.0.0.0:8000 -t public public/index.php",
         "test": "phpunit"
