--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "4.0.*"
+    "phpunit/phpunit": ">=4.8 < 6.0"
   },
   "autoload": {
     "psr-4": {
