Sorted out tests for the demo web application

--- a/demos/composer.json
+++ b/demos/composer.json
@@ -16,6 +16,6 @@
     },
 	"scripts": {
         "start" : "php -S 0.0.0.0:8000 -t public public/index.php",
-        "test" : "phpunit"
+        "test": "./vendor/bin/phpunit"
 	}
 }
