sorted out the test framework for the demo application. also added a test for the number route

--- a/demos/composer.json
+++ b/demos/composer.json
@@ -11,7 +11,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Hashbangcode\\Wevolution\\Demos\\": "src"
+      "Hashbangcode\\Wevolution\\Demos\\": "src",
+      "Hashbangcode\\Wevolution\\": "../src"
     }
   },
   "autoload-dev": {
