--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require-dev": {
     "phpunit/phpunit": ">=4.8 < 6.0",
-    "squizlabs/php_codesniffer": "^2.8"
+    "squizlabs/php_codesniffer": "^2.8",
+    "phpdocumentor/phpdocumentor": "2.*"
   },
   "autoload": {
     "psr-4": {
