--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
       "email": "philipnorton42@gmail.com"
     }
   ],
+  "require" : {
+    "php": ">=7.1"
+  },
   "require-dev": {
     "phpunit/phpunit": ">=4.8 < 6.0",
     "squizlabs/php_codesniffer": "^2.8",
-    "phpdocumentor/phpdocumentor": "2.*"
+    "phpdocumentor/phpdocumentor": "2.*",
+    "phpspec/prophecy": "^1.7"
   },
   "autoload": {
     "psr-4": {
