Spelt my own name wrong.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["wevolution"],
   "authors": [
     {
-      "name": "Philip Nporton",
+      "name": "Philip Norton",
       "email": "philipnorton42@gmail.com"
     }
   ],
