Moved the test into an autoload-dev section in the composer file.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
   "autoload": {
     "psr-4": {
       "Hashbangcode\\Wevolution\\": "src",
-      "Hashbangcode\\Wevolution\\Test\\": "tests"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+    "Hashbangcode\\Wevolution\\Test\\": "tests"
     }
   },
   "scripts": {
