--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Hashbangcode\\Wevolution\\": "src",
+      "Hashbangcode\\Wevolution\\": "src"
     }
   },
   "autoload-dev": {
