--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "require-dev": {
     "phpunit/phpunit": ">=4.8 < 6.0",
     "squizlabs/php_codesniffer": "^2.8",
-    "phpspec/prophecy": "^1.7"
+    "phpspec/prophecy": "^1.7",
+    "phpstan/phpstan": "^0.11.19"
   },
   "autoload": {
     "psr-4": {
