--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=4.8 < 6.0",
+    "phpunit/phpunit": "^6.0",
     "squizlabs/php_codesniffer": "^2.8",
     "phpspec/prophecy": "^1.7",
     "phpstan/phpstan": "^0.11.19"
