--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require" : {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "ramsey/uuid": "^3.9"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0",
