--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require" : {
     "php": ">=7.1",
-    "ramsey/uuid": "^3.9"
+    "ramsey/uuid": "^3.9",
+    "fzaninotto/faker": "^1.9"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0",
