--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,8 @@
   ],
   "require" : {
     "php": ">=7.1",
-    "ramsey/uuid": "^3.9",
-    "fzaninotto/faker": "^1.9"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^6.0",
-    "squizlabs/php_codesniffer": "^2.8",
-    "phpspec/prophecy": "^1.7",
-    "phpstan/phpstan": "^0.11.19"
+    "ramsey/uuid": "^4.0",
+    "fakerphp/faker": "^1.17"
   },
   "autoload": {
     "psr-4": {
@@ -32,5 +26,9 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "phpspec/prophecy": "^1.15"
   }
 }
